noinst_HEADERS = AnimationResource.h \
                 Audio.h \
                 BookResource.h \
                 ButtonWidget.h \
                 Camera.h \
                 Chapter.h \
                 CharacterButtonWidget.h \
                 ChoiceWidget.h \
                 Clock.h \
                 CompassWidget.h \
                 ContainerWidget.h \
                 Dialog.h \
                 DialogResource.h \
                 DialogWindow.h \
                 Event.h \
                 EventListener.h \
                 Exception.h \
                 FileBuffer.h \
                 FileManager.h \
                 FontResource.h \
                 Game.h \
                 GameApplication.h \
                 GameData.h \
                 GameFile.h \
                 GamePath.h \
                 GameState.h \
                 GenericFile.h \
                 HotspotWidget.h \
                 Image.h \
                 ImageButtonWidget.h \
                 ImageResource.h \
                 LabelResource.h \
                 LabelWidget.h \
                 MediaToolkit.h \
                 MousePointer.h \
                 MousePointerManager.h \
                 MoviePlayer.h \
                 MovieResource.h \
                 NameResource.h \
                 Orientation.h \
                 Palette.h \
                 PaletteResource.h \
                 PanelWidget.h \
                 Party.h \
                 PartyResource.h \
                 PlayerCharacter.h \
                 PopUpWidget.h \
                 RequestResource.h \
                 ResourceArchive.h \
                 ResourceData.h \
                 ResourceFile.h \
                 ResourceIndex.h \
                 ResourcePath.h \
                 ResourceTag.h \
                 SDL_Clock.h \
                 SDL_Toolkit.h \
                 SDL_Video.h \
                 ScreenResource.h \
                 Sound.h \
                 SoundResource.h \
                 TaggedResource.h \
                 TestApplication.h \
                 TextArea.h \
                 TextButtonWidget.h \
                 TickboxWidget.h \
                 TileDataResource.h \
                 TileWorldResource.h \
                 Video.h \
                 Widget.h \
                 WidgetFactory.h \
                 ZoneTableResource.h
noinst_LIBRARIES = libsdldriver.a \
                   libresbase.a \
                   libresdata.a \
                   libguitoolkit.a
noinst_PROGRAMS = dumpads \
                  dumpbmx \
                  dumpbok \
                  dumpddx \
                  dumpfnt \
                  dumpgam \
                  dumplbl \
                  dumppal \
                  dumpreq \
                  dumpscx \
                  dumpsnd \
                  dumptbl \
                  dumpttm \
                  dumpwld \
                  resourcedemo
bin_PROGRAMS = xbak
libguitoolkit_a_SOURCES = ButtonWidget.cc \
                          ButtonWidget.h \
                          CharacterButtonWidget.cc \
                          CharacterButtonWidget.h \
                          ChoiceWidget.cc \
                          ChoiceWidget.h \
                          CompassWidget.cc \
                          CompassWidget.h \
                          ContainerWidget.cc \
                          ContainerWidget.h \
                          Dialog.cc \
                          Dialog.h \
                          DialogWindow.cc \
                          DialogWindow.h \
                          HotspotWidget.cc \
                          HotspotWidget.h \
                          Image.cc \
                          Image.h \
                          ImageButtonWidget.cc \
                          ImageButtonWidget.h \
                          LabelWidget.cc \
                          LabelWidget.h \
                          MousePointer.cc \
                          MousePointer.h \
                          MousePointerManager.cc \
                          MousePointerManager.h \
                          MoviePlayer.cc \
                          MoviePlayer.h \
                          Palette.cc \
                          Palette.h \
                          PanelWidget.cc \
                          PanelWidget.h \
                          PopUpWidget.cc \
                          PopUpWidget.h \
                          Sound.cc \
                          Sound.h \
                          TextArea.cc \
                          TextArea.h \
                          TextButtonWidget.cc \
                          TextButtonWidget.h \
                          TickboxWidget.cc \
                          TickboxWidget.h \
                          Widget.cc \
                          Widget.h \
                          WidgetFactory.cc \
                          WidgetFactory.h
libresbase_a_SOURCES = Exception.cc \
                       Exception.h \
                       FileBuffer.cc \
                       FileBuffer.h \
                       FileManager.cc \
                       FileManager.h \
                       GameData.cc \
                       GameData.h \
                       GameFile.cc \
                       GameFile.h \
                       GamePath.cc \
                       GamePath.h \
                       GenericFile.cc \
                       GenericFile.h \
                       ResourceArchive.cc \
                       ResourceArchive.h \
                       ResourceData.h \
                       ResourceFile.cc \
                       ResourceFile.h \
                       ResourceIndex.cc \
                       ResourceIndex.h \
                       ResourcePath.cc \
                       ResourcePath.h \
                       ResourceTag.cc \
                       ResourceTag.h \
                       TaggedResource.cc \
                       TaggedResource.h
libresdata_a_SOURCES = AnimationResource.cc \
                       AnimationResource.h \
                       BookResource.cc \
                       BookResource.h \
                       DialogResource.cc \
                       DialogResource.h \
                       FontResource.cc \
                       FontResource.h \
                       ImageResource.cc \
                       ImageResource.h \
                       LabelResource.cc \
                       LabelResource.h \
                       MovieResource.cc \
                       MovieResource.h \
                       NameResource.cc \
                       NameResource.h \
                       PaletteResource.cc \
                       PaletteResource.h \
                       PartyResource.cc \
                       PartyResource.h \
                       RequestResource.cc \
                       RequestResource.h \
                       ScreenResource.cc \
                       ScreenResource.h \
                       SoundResource.cc \
                       SoundResource.h \
                       TileDataResource.cc \
                       TileDataResource.h \
                       TileWorldResource.cc \
                       TileWorldResource.h \
                       ZoneTableResource.cc \
                       ZoneTableResource.h
libsdldriver_a_SOURCES = Audio.h \
                         Clock.h \
                         Event.cc \
                         Event.h \
                         EventListener.h \
                         MediaToolkit.cc \
                         MediaToolkit.h \
                         SDL_Audio.cc \
                         SDL_Audio.h \
                         SDL_Clock.cc \
                         SDL_Clock.h \
                         SDL_Toolkit.cc \
                         SDL_Toolkit.h \
                         SDL_Video.cc \
                         SDL_Video.h \
                         Video.cc \
                         Video.h
dumpads_SOURCES = AnimationResource.cc \
                  AnimationResource.h \
                  dumpads.cc
dumpads_LDADD   = libresbase.a
dumpbmx_SOURCES = Image.cc \
                  Image.h \
                  ImageResource.cc \
                  ImageResource.h \
                  dumpbmx.cc
dumpbmx_LDADD   = libresbase.a \
                  libsdldriver.a
dumpbok_SOURCES = BookResource.cc \
                  BookResource.h \
                  dumpbok.cc
dumpbok_LDADD   = libresbase.a
dumpddx_SOURCES = DialogResource.cc \
                  DialogResource.h \
                  dumpddx.cc
dumpddx_LDADD   = libresbase.a
dumpfnt_SOURCES = FontResource.cc \
                  FontResource.h \
                  dumpfnt.cc
dumpfnt_LDADD   = libresbase.a \
                  libsdldriver.a
dumpgam_SOURCES = dumpgam.cc
dumpgam_LDADD   = libresbase.a
dumplbl_SOURCES = LabelResource.cc \
                  LabelResource.h \
                  dumplbl.cc
dumplbl_LDADD   = libresbase.a
dumppal_SOURCES = PaletteResource.cc \
                  PaletteResource.h \
                  dumppal.cc
dumppal_LDADD   = libguitoolkit.a \
                  libresbase.a \
                  libsdldriver.a
dumpreq_SOURCES = RequestResource.cc \
                  RequestResource.h \
                  dumpreq.cc
dumpreq_LDADD   = libresbase.a
dumpscx_SOURCES = Image.cc \
                  Image.h \
                  ScreenResource.cc \
                  ScreenResource.h \
                  dumpscx.cc
dumpscx_LDADD   = libresbase.a \
                  libsdldriver.a
dumpsnd_SOURCES = Sound.cc \
                  Sound.h \
                  SoundResource.cc \
                  SoundResource.h \
                  dumpsnd.cc
dumpsnd_LDADD   = libresbase.a
dumptbl_SOURCES = ZoneTableResource.cc \
                  ZoneTableResource.h \
                  dumptbl.cc
dumptbl_LDADD   = libresbase.a
dumpttm_SOURCES = MovieResource.cc \
                  MovieResource.h \
                  dumpttm.cc
dumpttm_LDADD   = libresbase.a
dumpwld_SOURCES = TileDataResource.cc \
                  TileDataResource.h \
                  TileWorldResource.cc \
                  TileWorldResource.h \
                  dumpwld.cc
dumpwld_LDADD   = libresbase.a
resourcedemo_SOURCES = TestApplication.cc \
                       TestApplication.h \
                       resourcedemo.cc
resourcedemo_LDADD = libguitoolkit.a \
                     libresdata.a \
                     libresbase.a \
                     libsdldriver.a
xbak_SOURCES = Camera.cc \
               Camera.h \
               Chapter.cc \
               Chapter.h \
               Game.cc \
               Game.h \
               GameApplication.cc \
               GameApplication.h \
               GameState.cc \
               GameState.h \
               Orientation.cc \
               Orientation.h \
               Party.cc \
               Party.h \
               PlayerCharacter.cc \
               PlayerCharacter.h \
               xbak.cc
xbak_LDADD = libguitoolkit.a \
             libresdata.a \
             libresbase.a \
             libsdldriver.a
