noinst_HEADERS = AnimationResource.h \
                 Audio.h \
                 BadgeWidget.h \
                 BookResource.h \
                 ButtonWidget.h \
                 Camera.h \
                 Chapter.h \
                 CharacterButtonWidget.h \
                 ChoiceWidget.h \
                 Clock.h \
                 CombatViewWidget.h \
                 CompassWidget.h \
                 ContainerWidget.h \
                 Dialog.h \
                 DialogFactory.h \
                 DialogResource.h \
                 DialogWindow.h \
                 Directories.h \
                 Event.h \
                 EventListener.h \
                 Exception.h \
                 FileBuffer.h \
                 FileManager.h \
                 FontResource.h \
                 Game.h \
                 GameApplication.h \
                 GameData.h \
                 GameFile.h \
                 GameResource.h \
                 GameState.h \
                 GameViewWidget.h \
                 GenericFile.h \
                 HotspotWidget.h \
                 Image.h \
                 ImageButtonWidget.h \
                 ImageResource.h \
                 ImageWidget.h \
                 LabelResource.h \
                 MapViewWidget.h \
                 MediaToolkit.h \
                 MousePointer.h \
                 MousePointerManager.h \
                 MoviePlayer.h \
                 MovieResource.h \
                 NameResource.h \
                 Null_Audio.h \
                 Observer.h \
                 Orientation.h \
                 Palette.h \
                 PaletteResource.h \
                 PanelWidget.h \
                 Party.h \
                 PartyResource.h \
                 PlayerCharacter.h \
                 PopUpWidget.h \
                 PortraitWidget.h \
                 Position.h \
                 RatingsWidget.h \
                 RequestResource.h \
                 ResourceArchive.h \
                 ResourceData.h \
                 ResourceFile.h \
                 ResourceIndex.h \
                 ResourceTag.h \
                 SDL_Clock.h \
                 SDL_Toolkit.h \
                 SDL_Video.h \
                 ScreenResource.h \
                 SkillLevelWidget.h \
                 SkillsWidget.h \
                 Sound.h \
                 SoundResource.h \
                 Statistics.h \
                 Subject.h \
                 TaggedResource.h \
                 TestApplication.h \
                 TextArea.h \
                 TextButtonWidget.h \
                 TextWidget.h \
                 TickboxWidget.h \
                 TileDataResource.h \
                 TileWorldResource.h \
                 Video.h \
                 Widget.h \
                 WidgetFactory.h \
                 WorldViewWidget.h \
                 ZoneTableResource.h
noinst_LIBRARIES = libbase.a \
                   libresbase.a \
                   libresdata.a \
                   libgame.a \
                   libguitoolkit.a \
                   libdriver.a
noinst_PROGRAMS = dumpads \
                  dumpbmx \
                  dumpbok \
                  dumpddx \
                  dumpfnt \
                  dumpgam \
                  dumplbl \
                  dumppal \
                  dumpreq \
                  dumpscx \
                  dumpsnd \
                  dumptbl \
                  dumpttm \
                  dumpwld \
                  resourcedemo
bin_PROGRAMS = xbak
libbase_a_SOURCES = Event.cc \
                    Event.h \
                    EventListener.h \
                    Exception.cc \
                    Exception.h \
                    FileBuffer.cc \
                    FileBuffer.h \
                    GenericFile.cc \
                    GenericFile.h \
                    Observer.h \
                    Subject.cc \
                    Subject.h
libgame_a_SOURCES = Camera.cc \
                    Camera.h \
                    Chapter.cc \
                    Chapter.h \
                    Game.cc \
                    Game.h \
                    GameResource.cc \
                    GameResource.h \
                    Orientation.cc \
                    Orientation.h \
                    Party.cc \
                    Party.h \
                    PlayerCharacter.cc \
                    PlayerCharacter.h \
                    Position.cc \
                    Position.h \
                    Statistics.cc \
                    Statistics.h
libguitoolkit_a_SOURCES = BadgeWidget.cc \
                          BadgeWidget.h \
                          ButtonWidget.cc \
                          ButtonWidget.h \
                          CharacterButtonWidget.cc \
                          CharacterButtonWidget.h \
                          ChoiceWidget.cc \
                          ChoiceWidget.h \
                          CombatViewWidget.cc \
                          CombatViewWidget.h \
                          CompassWidget.cc \
                          CompassWidget.h \
                          ContainerWidget.cc \
                          ContainerWidget.h \
                          Dialog.cc \
                          Dialog.h \
                          DialogFactory.cc \
                          DialogFactory.h \
                          DialogWindow.cc \
                          DialogWindow.h \
                          GameViewWidget.cc \
                          GameViewWidget.h \
                          HotspotWidget.cc \
                          HotspotWidget.h \
                          Image.cc \
                          Image.h \
                          ImageButtonWidget.cc \
                          ImageButtonWidget.h \
                          ImageWidget.cc \
                          ImageWidget.h \
                          MapViewWidget.cc \
                          MapViewWidget.h \
                          MousePointer.cc \
                          MousePointer.h \
                          MousePointerManager.cc \
                          MousePointerManager.h \
                          MoviePlayer.cc \
                          MoviePlayer.h \
                          Palette.cc \
                          Palette.h \
                          PanelWidget.cc \
                          PanelWidget.h \
                          PopUpWidget.cc \
                          PopUpWidget.h \
                          PortraitWidget.cc \
                          PortraitWidget.h \
                          RatingsWidget.cc \
                          RatingsWidget.h \
                          SkillLevelWidget.cc \
                          SkillLevelWidget.h \
                          SkillsWidget.cc \
                          SkillsWidget.h \
                          Sound.cc \
                          Sound.h \
                          TextArea.cc \
                          TextArea.h \
                          TextButtonWidget.cc \
                          TextButtonWidget.h \
                          TextWidget.cc \
                          TextWidget.h \
                          TickboxWidget.cc \
                          TickboxWidget.h \
                          Widget.cc \
                          Widget.h \
                          WidgetFactory.cc \
                          WidgetFactory.h \
                          WorldViewWidget.cc \
                          WorldViewWidget.h
libresbase_a_SOURCES = Directories.cc \
                       Directories.h \
                       FileManager.cc \
                       FileManager.h \
                       GameData.h \
                       GameFile.cc \
                       GameFile.h \
                       ResourceArchive.cc \
                       ResourceArchive.h \
                       ResourceData.h \
                       ResourceFile.cc \
                       ResourceFile.h \
                       ResourceIndex.cc \
                       ResourceIndex.h \
                       ResourceTag.cc \
                       ResourceTag.h \
                       TaggedResource.cc \
                       TaggedResource.h
libresdata_a_SOURCES = AnimationResource.cc \
                       AnimationResource.h \
                       BookResource.cc \
                       BookResource.h \
                       DialogResource.cc \
                       DialogResource.h \
                       FontResource.cc \
                       FontResource.h \
                       ImageResource.cc \
                       ImageResource.h \
                       LabelResource.cc \
                       LabelResource.h \
                       MovieResource.cc \
                       MovieResource.h \
                       NameResource.cc \
                       NameResource.h \
                       PaletteResource.cc \
                       PaletteResource.h \
                       PartyResource.cc \
                       PartyResource.h \
                       RequestResource.cc \
                       RequestResource.h \
                       ScreenResource.cc \
                       ScreenResource.h \
                       SoundResource.cc \
                       SoundResource.h \
                       TileDataResource.cc \
                       TileDataResource.h \
                       TileWorldResource.cc \
                       TileWorldResource.h \
                       ZoneTableResource.cc \
                       ZoneTableResource.h
libdriver_a_SOURCES = Audio.h \
                      Clock.h \
                      MediaToolkit.cc \
                      MediaToolkit.h \
                      Null_Audio.cc \
                      Null_Audio.h \
                      SDL_Audio.cc \
                      SDL_Audio.h \
                      SDL_Clock.cc \
                      SDL_Clock.h \
                      SDL_Toolkit.cc \
                      SDL_Toolkit.h \
                      SDL_Video.cc \
                      SDL_Video.h \
                      Video.cc \
                      Video.h
dumpads_SOURCES = AnimationResource.cc \
                  AnimationResource.h \
                  dumpads.cc
dumpads_LDADD   = libresbase.a \
                  libbase.a
dumpbmx_SOURCES = Image.cc \
                  Image.h \
                  ImageResource.cc \
                  ImageResource.h \
                  dumpbmx.cc
dumpbmx_LDADD   = libresbase.a \
                  libdriver.a \
                  libbase.a
dumpbok_SOURCES = BookResource.cc \
                  BookResource.h \
                  dumpbok.cc
dumpbok_LDADD   = libresbase.a \
                  libbase.a
dumpddx_SOURCES = DialogResource.cc \
                  DialogResource.h \
                  dumpddx.cc
dumpddx_LDADD   = libresbase.a \
                  libbase.a
dumpfnt_SOURCES = FontResource.cc \
                  FontResource.h \
                  dumpfnt.cc
dumpfnt_LDADD   = libresbase.a \
                  libdriver.a \
                  libbase.a
dumpgam_SOURCES = dumpgam.cc
dumpgam_LDADD   = libgame.a \
                  libguitoolkit.a \
                  libresdata.a \
                  libresbase.a \
                  libdriver.a \
                  libbase.a
dumplbl_SOURCES = LabelResource.cc \
                  LabelResource.h \
                  dumplbl.cc
dumplbl_LDADD   = libresbase.a \
                  libbase.a
dumppal_SOURCES = PaletteResource.cc \
                  PaletteResource.h \
                  dumppal.cc
dumppal_LDADD   = libguitoolkit.a \
                  libresbase.a \
                  libdriver.a \
                  libbase.a
dumpreq_SOURCES = RequestResource.cc \
                  RequestResource.h \
                  dumpreq.cc
dumpreq_LDADD   = libresbase.a \
                  libbase.a
dumpscx_SOURCES = Image.cc \
                  Image.h \
                  ScreenResource.cc \
                  ScreenResource.h \
                  dumpscx.cc
dumpscx_LDADD   = libresbase.a \
                  libdriver.a \
                  libbase.a
dumpsnd_SOURCES = Sound.cc \
                  Sound.h \
                  SoundResource.cc \
                  SoundResource.h \
                  dumpsnd.cc
dumpsnd_LDADD   = libresbase.a \
                  libbase.a
dumptbl_SOURCES = ZoneTableResource.cc \
                  ZoneTableResource.h \
                  dumptbl.cc
dumptbl_LDADD   = libresbase.a \
                  libbase.a
dumpttm_SOURCES = MovieResource.cc \
                  MovieResource.h \
                  dumpttm.cc
dumpttm_LDADD   = libresbase.a \
                  libbase.a
dumpwld_SOURCES = TileDataResource.cc \
                  TileDataResource.h \
                  TileWorldResource.cc \
                  TileWorldResource.h \
                  dumpwld.cc
dumpwld_LDADD   = libresbase.a \
                  libbase.a
resourcedemo_SOURCES = TestApplication.cc \
                       TestApplication.h \
                       resourcedemo.cc
resourcedemo_LDADD = libguitoolkit.a \
                     libresdata.a \
                     libresbase.a \
                     libdriver.a \
                     libbase.a
xbak_SOURCES = GameApplication.cc \
               GameApplication.h \
               GameState.cc \
               GameState.h \
               xbak.cc
xbak_LDADD = libgame.a \
             libguitoolkit.a \
             libresdata.a \
             libresbase.a \
             libdriver.a \
             libbase.a
